--- a/i18n/en/strings.json
+++ b/i18n/en/strings.json
@@ -63,5 +63,12 @@
   "presence": {
     "no_data": "No data.",
     "header": "__**{{target.user.tag}}**'s Presence__"
+  },
+  "gnu": {
+    "header": "I'd like to interject for just a moment...",
+    "text": "What you're refering to as {{text}}, is in fact, GNU/{{text}}, or as I've recently taken to calling it, GNU plus {{text}}. {{text}} is not an operating system unto itself, but rather another free component of a fully functioning GNU system made useful by the GNU corelibs, shell utilities and vital system components comprising a full OS as defined by POSIX.\n\nMany computer users run a modified version of the GNU system every day, without realizing it. Through a peculiar turn of events, the version of GNU which is widely used today is often called {{text}}, and many of its users are not aware that it is basically the GNU system, developed by the GNU Project.\n\nThere really is a {{text}}, and these people are using it, but it is just a part of the system they use. {{text}} is the kernel: the program in the system that allocates the machine's resources to the other programs that you run. The kernel is an essential part of an operating system, but useless by itself; it can only function in the context of a complete operating system. {{text}} is normally used in combination with the GNU operating system: the whole system is basically GNU with {{text}} added, or GNU/{{text}}. All the so-called {{text}} distributions are really distributions of GNU/{{text}}!"
+  },
+  "help": {
+    "arrived": "Help has arrived!"
   }
 }
